# agent-observability

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  scorecard.yml
benchmarks/: README.md  test_fidelity.py  test_ingestion.py  test_overhead.py  test_replay_vs_live.py
benchmarks/results/: baseline.json
demos/: record_replay_demo.py
dev/bench/: data.js
docker/grafana/datasources/: tempo.yaml
docs/: concepts.md  getting-started.md  lessons.md
docs/integrations/: langgraph.md  openai-agents.md
docs/launch/: show-hn-draft.md  why-we-built-this.md
examples/01-basic-trace/: README.md  example.py
examples/02-langgraph-failure-replay/: README.md  example.py
examples/03-ci-pipeline/: README.md  example.py  fixture.db  test_with_fixture.py
examples/04-agno-agent-team/: README.md  example.py
examples/04-autogen-agent-observability/: README.md  example.py
examples/04-bedrock-record-replay/: README.md  example.py
examples/04-crewai-research-crew/: README.md  example.py
examples/04-google-genai-thinking-config/: README.md  example.py
examples/04-grpc-record-replay/: README.md  echo_pb2.py  echo_pb2_grpc.py  example.py
examples/04-haystack-pipeline/: README.md  example.py
examples/04-llama-index-agent-trace/: README.md  example.py
examples/04-mcp-stdio-capture/: README.md  example.py  mcp_server.py
examples/04-openai-agents-basic/: README.md  example.py
examples/04-pydantic-ai-retry-diagnosis/: README.md  example.py
examples/04-realtime-websocket-interceptor/: README.md  example.py
examples/05-parallel-command-parent-routing/: README.md  example.py
examples/06-langgraph-handoff-parallel-tools/: README.md  example.py
examples/07-langgraph-invoke-vs-stream-timing/: README.md  example.py
examples/08-langgraph-react-agent-tool-arg-injection/: README.md  example.py
examples/09-langgraph-dev-cli/: README.md  graph.py  simulate_dev_server.py
examples/10-langgraph-checkpointer-interrupt-resume/: README.md  example.py
examples/11-langgraph-react-agent-non-openai-finish-reason/: README.md  example.py
examples/12-langgraph-structured-response-tool-conflict/: README.md  example.py
examples/13-langgraph-streaming-token-usage/: README.md  example.py
examples/14-openai-responses-api-tool-call/: README.md  example.py
examples/15-langgraph-tool-execution-error/: README.md  example.py
examples/16-openai-sdk-plain-embeddings/: README.md  example.py
examples/17-langgraph-toolnode-custom-provider/: README.md  example.py
examples/18-langgraph-anthropic-empty-content/: README.md  example.py
npm/: LICENSE  README.md  package.json
scripts/: create-launch-issues.sh
src/agent_trace/: __init__.py  _cli.py  _inspect.py
src/agent_trace/_replay/: engine.py  fixture.py
src/agent_trace/core/: clock.py  exceptions.py  span.py  trace.py
src/agent_trace/exporters/: file.py  otlp.py  remote_fixture.py  stdout.py
src/agent_trace/integrations/: __init__.py  agno.py  autogen.py  crewai.py  google_genai.py  haystack.py  langchain_core.py  langgraph.py  langgraph_checkpoint.py  langgraph_state_diff.py  langgraph_stream_debug.py  llama_index.py  mcp.py  openai_agents.py  pydantic_ai.py  streaming.py
src/agent_trace/interceptor/: __init__.py  aiohttp_hook.py  botocore_hook.py  grpc_hook.py  httpx_hook.py  logging_hook.py  requests_patch.py  sse.py  stdio_hook.py  warnings_hook.py  websocket_hook.py
src/agent_trace/plugins/: __init__.py  base.py
src/agent_trace/replay/: engine.py  fixture.py
tests/: conftest.py
tests/integration/: _mcp_stdio_server.py  test_agno.py  test_autogen.py  test_crewai.py  test_google_genai.py  test_groq_integration.py  test_haystack.py  test_langchain_core.py  test_langgraph.py  test_langgraph_checkpoint.py  test_langgraph_state_diff.py  test_langgraph_stream_debug.py  test_llama_index.py  test_mcp.py  test_openai_agents.py  test_pydantic_ai.py
tests/unit/: test_aiohttp_hook.py  test_botocore_hook.py  test_cli.py  test_clock.py  test_exporters.py  test_fixture.py  test_grpc_hook.py  test_httpx_hook.py  test_inspect.py  test_integrations_agno.py  test_integrations_autogen.py  test_integrations_crewai.py  test_integrations_google_genai.py  test_integrations_haystack.py  test_integrations_langchain_core.py  test_integrations_langgraph.py  test_integrations_llama_index.py  test_integrations_mcp.py  test_integrations_openai_agents.py  test_langgraph_state_diff.py  test_langgraph_stream_debug.py  test_logging_hook.py  test_plugins.py  test_remote_fixture.py  test_replay_engine.py  test_requests_patch.py  test_span.py  test_sse.py  test_stdio_hook.py  test_streaming.py  test_trace.py  test_tracer.py  test_warnings_hook.py  test_websocket_hook.py
tests/unit/grpc_fixtures/: echo.proto  echo_pb2.py  echo_pb2_grpc.py
