[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-observability-trace"
version = "0.1.3"
description = "AI agent observability with deterministic record/replay — capture any LangGraph or OpenAI Agents SDK run, replay it offline at zero API cost."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Rudrendu Paul"},
    {name = "Sourav Nandy"},
]
keywords = ["agents", "observability", "tracing", "llm", "langgraph", "openai", "replay", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
autogen = ["autogen-agentchat>=0.4", "autogen-ext[openai]>=0.4"]
langgraph = ["langgraph>=1.0.10", "langchain-core>=0.3"]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.26"]
openai-agents = ["openai-agents>=0.0.3"]
crewai = ["crewai>=1.0.0"]
llama-index = ["llama-index-core>=0.14"]
pydantic-ai = ["pydantic-ai>=2.0"]
haystack = ["haystack-ai>=2.0"]
agno = ["agno>=2.7"]
google-genai = ["google-genai>=2.0", "langchain-google-genai>=4.0"]
otlp = ["opentelemetry-exporter-otlp-proto-grpc>=1.25"]
requests = ["requests>=2.31"]
groq = ["groq>=0.9"]
grpc = ["grpcio>=1.60"]
aiohttp = ["aiohttp>=3.9"]
botocore = ["boto3>=1.34"]
realtime = ["websockets>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-benchmark[histogram]>=4.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "requests>=2.31",
    "types-requests>=2.31",
    "respx>=0.21",  # httpx mocking for unit tests
    "groq>=0.9",     # verifies the httpx interceptor against the real Groq SDK
    "grpcio>=1.60",  # gRPC interceptor unit tests
    "grpcio-tools>=1.60",  # protoc, to compile the test-only echo.proto fixture
    "aiohttp>=3.9",
    "aioresponses>=0.7",  # aiohttp mocking for unit tests
    "boto3>=1.34",  # AWS SDK — botocore interceptor unit tests
    "websockets>=13.0",  # WebSocket interceptor unit tests
    "langchain-core>=0.3",  # generic LangChain callback integration unit tests
    "langchain-classic>=1.0",  # classic Chain/BaseMemory integration tests (#6761)
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/agent-observability"
Documentation = "https://github.com/RudrenduPaul/agent-observability/blob/main/docs/getting-started.md"
Repository = "https://github.com/RudrenduPaul/agent-observability"
"Bug Tracker" = "https://github.com/RudrenduPaul/agent-observability/issues"
Changelog = "https://github.com/RudrenduPaul/agent-observability/blob/main/CHANGELOG.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
agent-trace = "agent_trace._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "S", "PL", "RUF", "ANN"]
ignore = [
    "S101",      # assert is fine in tests
    "ANN401",    # Any is sometimes unavoidable in interop code
    "PLR0913",   # too many arguments — integration callbacks have many
    "PLR2004",   # magic values are fine in tests/benchmarks
    "PLC0415",   # lazy imports inside functions are intentional for optional deps
    "B010",      # setattr with constant name is intentional to bypass mypy method-assign checks
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004", "ANN", "F841", "E741", "B017", "B905", "RUF059", "E402", "E501"]
"benchmarks/*" = ["S", "PLR2004", "ANN", "N806"]
"examples/*" = ["S", "ANN"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langchain_core.*", "opentelemetry.*", "agents.*", "boto3.*", "google.cloud.*", "crewai.*", "llama_index.*", "pydantic.*", "haystack.*", "grpc.*", "google.protobuf.*", "botocore.*", "mcp.*", "anyio.*", "google.genai.*", "langchain_google_genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# AgentTraceHook subclasses agents.lifecycle.RunHooksBase (required at
# runtime -- Runner.run() does an isinstance() check).  Whether that import
# resolves to a real class or to Any (via ignore_missing_imports above)
# depends on whether the openai-agents extra is installed in the mypy run;
# the `# type: ignore[misc]` this needs in the "not installed" case reports
# as unused in the "installed" case.  Disable that specific warning for just
# this module rather than for the whole codebase.
module = ["agent_trace.integrations.openai_agents"]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require real APIs — deselect with -m 'not integration')",
    "slow: marks tests as slow-running",
]
addopts = "--strict-markers"
env = [
    "AGENT_TRACE_NETWORK_GUARD=1",
]

[tool.coverage.run]
source = ["src/agent_trace"]
omit = [
    "*/integrations/*",      # covered by integration tests
    "*/_cli.py",             # CLI entry point, tested separately via subprocess
    "*/exporters/otlp.py",  # requires optional opentelemetry package
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
